force-app/main/default/objects/Sfile_Data_Migration__c/Sfile_Data_Migration__c.object-meta.xml
<CustomObject>
    <label>Sfile Data Migration</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Sfile Data Migration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sfile Data Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>