force-app/main/default/objects/Sfile_Data_Migration__c/fields/ContentDocumentID__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentID__c</fullName>
    <label>Content Document ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>