force-app/main/default/objects/Sfile_Data_Migration__c/fields/SharePointFileId__c.field-meta.xml
<CustomField>
    <fullName>SharePointFileId__c</fullName>
    <label>SharePointFileId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>